# sine-shin

./: README.md  index.html  package-lock.json  package.json
docs/: ONLINE_SYNC_PLAN.md
src/: App.tsx  cheapcode.ts  (+4 more)
src-tauri/: .gitignore  Cargo.toml  supabase_add_updated_at_triggers.sql  supabase_migration.sql  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_shop_settings.sql  001_init.sql  002_create_users_table.sql  002_pg_init.sql  002_postgres_init.sql  003_create_customers_table.sql  full_schema.sql  full_schema_postgres.sql  postgres_string_timestamp_compat.sql
src-tauri/src/: STRUCTURE.md  crypto.rs  db.rs  db_macros.rs  error.rs  lib.rs  main.rs  models.rs  refactor.py  scheduler.rs  state.rs
src-tauri/src/commands/: account.rs  auth.rs  customer.rs  drive.rs  expense.rs  mod.rs  order.rs  settings.rs  shop.rs  staff.rs  system.rs
src-tauri/src/db/: dialect.rs  helpers.rs  mod.rs  postgres.rs  sqlite.rs
src-tauri/src/entities/: customers.rs  expenses.rs  mod.rs  order_items.rs  orders.rs  shop_settings.rs  sync_config.rs  sync_queue.rs  sync_sessions.rs  users.rs
src-tauri/src/migration/: m001_initial.rs  mod.rs
src-tauri/src/migrator/: m20231001_000001_create_core_tables.rs  m20231001_000002_create_sync_tables.rs  m20231001_000003_add_audit_columns.rs  mod.rs
src-tauri/src/services/: account.rs  auth.rs  customer.rs  drive.rs  expense.rs  mod.rs  order.rs  settings.rs  shop.rs  staff.rs  system.rs
src-tauri/src/sync/: client.rs  mod.rs
(+149 files in other folders)
