[package]
name = "sine-shin"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sine_shin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["sync"] }
bcrypt = "0.15"
reqwest = { version = "0.13.2", features = ["form", "json", "multipart"] }
tokio-cron-scheduler = "0.15.1"
zip = "8.1.0"
chrono = "0.4.44"
url = "2.5.8"
futures = "0.3.32"
uuid = { version = "1.21.0", features = ["v4"] }
dotenvy = "0.15.7"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
tauri-plugin-clipboard-manager = "2.3.2"

